# normal_lib

./: README.md  pyproject.toml  test.py
example_configs/: 3_items_config.json  easy_config.json  my_houses.json
example_objects/: house.json  user.json  user_invalid.json
normal_lib/: class_funcs.py  config.py  config_reader.py  db_interface.py  normalizer.py  validator.py
normal_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
normal_lib/db_drivers/: mongo_driver.py
