[project]
name = "normal_lib"                  # Change to your library's name
version = "0.1.0"
description = "A cool library that does stuff"
authors = [
    { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

