[project]
name = "normal_lib"                  # Change to your library's name
version = "0.1.0"
description = "A cool library that does stuff"
authors = [
    { name="diesmaster", email="chris@vanmaarseveen.net" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "dnspython==2.7.0",
    "pymongo==4.14.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

