[project]
name = "normal_lib"
version = "0.1.0"
description = "A cool library that does stuff"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"                       # <- fix deprecation
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "dnspython==2.7.0",
    "pymongo==4.14.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]       # 68+ supports pyproject config well
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["normal_lib*"]             # <- only package your library
exclude = ["example_objects*", "example_configs*"]
